@@ -43,10 +43,10 @@
  * (to derive a character from UTF-8 encoded text, use
  * g_utf8_get_char()). The break type is used to find word and line
  * breaks ("text boundaries"), Pango implements the Unicode boundary
- * resolution alogorithms and normally you would use a function such
+ * resolution algorithms and normally you would use a function such
  * as pango_break() instead of caring about break types yourself.
  * 
- * Return value: break type
+ * Return value: the break type of @c
  **/
 GUnicodeBreakType
 g_unichar_break_type (gunichar c)
